--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 /*removes arrows of number input fields*/
 @layer base {
-  input[type=number]{
+  input[type="number"] {
     -moz-appearance: textfield;
   }
   input[type="number"]::-webkit-inner-spin-button,
@@ -15,5 +15,5 @@
 }
 
 :root {
-  @apply text-neutral-700 bg-neutral-50 dark:bg-neutral-900 dark:text-neutral-50;
+  @apply bg-neutral-50 text-neutral-700 dark:bg-neutral-900 dark:text-neutral-50;
 }
